# semantle

./: README.md  main.py  pyproject.toml  solver.py  word_list.json
